# loacalAiCoder

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh
backend/: __main__.py  main.py
backend/agent/: agent_loop.py  llm_provider.py  prompts.py  task_manager.py
backend/api/: app.py
backend/core/: config.py  database.py  llm.py  logging.py  permissions.py
backend/db/: database.py
backend/memory/: context_engine.py  memory_manager.py  snapshot_manager.py
backend/models/: schemas.py  types.py
backend/tools/: file_agent.py  git_agent.py  repo_intelligence.py  terminal_agent.py  testing_agent.py
cli/: main.py
frontend/: Dockerfile.frontend  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
tests/: conftest.py  test_api.py  test_file_agent.py  test_repo_intelligence.py  test_terminal_agent.py
