[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "localcoder"
version = "1.0.0"
description = "Privacy-first autonomous AI coding agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "coding", "agent", "llm", "local", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.20.0",
    "chromadb>=0.4.24",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.scripts]
localcoder = "cli.main:cli"

[project.urls]
Repository = "https://github.com/yourname/localcoder"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "cli*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
